office-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: office-service
spec:
  type: ClusterIP
  selector:
    app: office-service
  ports:
    - port: 80
      targetPort: 80
